--- a/log_process (copy)/Makefile
+++ b/log_process (copy)/Makefile
@@ -18,6 +18,16 @@ sensor_gateway : main.c connmgr.c datamgr.c sensor_db.c sbuffer.c lib/libdplist.
 	@echo "$(TITLE_COLOR)\n***** LINKING sensor_gateway *****$(NO_COLOR)"
 	gcc main.o connmgr.o datamgr.o sensor_db.o sbuffer.o -ldplist -ltcpsock -lpthread -o sensor_gateway -Wall -L./lib -Wl,-rpath=./lib -lsqlite3 -fdiagnostics-color=auto
 
+file_creator : file_creator.c
+	@echo "$(TITLE_COLOR)\n***** COMPILE & LINKING file_creator *****$(NO_COLOR)"
+	gcc file_creator.c -o file_creator -Wall -fdiagnostics-color=auto
+
+sensor_node : sensor_node.c lib/libtcpsock.so
+	@echo "$(TITLE_COLOR)\n***** COMPILING sensor_node *****$(NO_COLOR)"
+	gcc -c sensor_node.c -Wall  -o sensor_node.o -fdiagnostics-color=auto
+	@echo "$(TITLE_COLOR)\n***** LINKING sensor_node *****$(NO_COLOR)"
+	gcc sensor_node.o -ltcpsock -o sensor_node -Wall -L./lib -Wl,-rpath=./lib -fdiagnostics-color=auto
+
 # If you only want to compile one of the libs, this target will match (e.g. make liblist)
 libdplist : lib/libdplist.so
 libsbuffer : lib/libsbuffer.so
